<resources>
    <string name="app_name">Podcastr</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">pxb6ueKFugKQ7KkX5ZLyGFXZLj5qCtBZwnZ7hEpf</string>
    <string name="back4app_client_key">LrsxRnXL4hCZ1Hf9ADSsvkx3nfvzs42qdvdogtVO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="user_photo">User Photo</string>
    <string name="set_rating">Set Rating</string>
    <string name="write_a_review">Write a Review</string>
    <string name="submit">Submit</string>
    <string name="enter_review">Enter review</string>
    <string name="review">+ Review</string>
    <string name="add_to_list">+ Add to List</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="link_your_spotify_account">Link Your Spotify Account</string>
    <string name="podcasts_in_common">Podcasts In Common</string>
    <string name="no_items_in_common">No Items In Common</string>
    <string name="listen_together">Listen Together</string>
    <string name="add_to_lists">+ Add To Lists</string>
    <string name="search">Search</string>
    <string name="blank" />
    <string name="profile_image">Profile Image</string>
    <string name="your_lists">Your Lists</string>
    <string name="add_a_list">+ Add A List</string>
    <string name="lists">Lists</string>
    <string name="top_rated">Top Rated</string>
    <string name="recently_rated">Recently Rated</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>